# sm-deployment-utils

./: autoscaling.tf  cloudformation.json  cloudformation.tf  cloudwatch_alarm.tf  endpoint.tf  endpoint_config.tf  iam.tf  locals.tf  model.tf  output.tf  providers.tf  state.tf  tfplan  variables.tf
endpoint-testing/: pyproject.toml
endpoint-testing/src/: basic.py
terraform/: cloudwatch_alarm.tf  endpoint.tf  endpoint_config.tf  locals.tf  model.tf  providers.tf  variables.tf
