[tool.poetry]
name = "endpoint-testing"
version = "0.1.0"
description = ""
authors = ["kkmol <kieran.molloy@zuto.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
